# cloudmart

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: _build-and-deploy.yml  ci-frontend.yml  ci-order-service.yml  ci-product-service.yml  ci-terraform.yml  promote-prod.yml  promote-staging.yml
docs/: DEPLOYMENT.md
infrastructure/: README.md
infrastructure/ansible/: ansible.cfg
infrastructure/ansible/inventory/: dev.yml  prod.yml
infrastructure/ansible/playbooks/: install-tools.yml  setup-bastion.yml
infrastructure/scripts/: bootstrap.sh  validate.sh
k8s/: README.md
k8s/base/frontend/: configmap.yaml  deployment.yaml  service.yaml
k8s/base/network-policies/: allow-dns.yaml  default-deny.yaml  frontend.yaml  kustomization.yaml  order-service.yaml  product-service.yaml  redis.yaml
k8s/base/order-service/: configmap.yaml  deployment.yaml  service.yaml  (+1 more)
k8s/platform/: deploy-platform.sh  seed-data.sh
services/frontend/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
services/order-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/order-service/alembic/: env.py
services/order-service/alembic/versions/: cb43dba68d59_add_user_id_to_orders.py  e2452bba64a5_create_orders_and_order_items_tables.py
services/order-service/src/order_service/: __init__.py  config.py  database.py  logging_config.py  main.py  metrics.py
services/order-service/src/order_service/auth/: dependencies.py  events.py  jwt_service.py  oauth_client.py  rate_limiter.py
services/order-service/src/order_service/models/: __init__.py  order.py  order_item.py
services/order-service/src/order_service/repositories/: __init__.py  order_repository.py
services/order-service/src/order_service/routers/: auth.py  availability.py  orders.py
services/order-service/src/order_service/schemas/: __init__.py  inventory.py  order.py
services/order-service/src/order_service/services/: cache_service.py  order_service.py  product_client.py  pubsub_publisher.py
services/order-service/tests/: conftest.py  test_auth.py  test_auth_logging.py  test_availability.py  test_create_order.py  test_health.py  test_models.py  test_order_queries.py  test_pubsub.py
services/product-service/: Dockerfile  README.md  docker-compose.yml  mvnw  mvnw.cmd  pom.xml
(+211 files in other folders)
